[gd_scene load_steps=2 format=3 uid="uid://deiyctrhgfslv"]

[ext_resource type="Script" path="res://Scripts/GameManager.gd" id="1_af3v3"]

[node name="GameManager" type="Node"]
script = ExtResource("1_af3v3")

[node name="MultiplierTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="timeout" from="MultiplierTimer" to="." method="_on_multiplier_timer_timeout"]
